change layout,delete footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
         <!--same as 1st image-->
       </figure>
     </div>
-  </section>
+
+    <div id="contact_me">
+      <h1 class="section_title">You can find me at:</h1>
+      <div id="contact_inner_div">
+        
+      </div>
+
+    </div>
+  </section><!--end about me section-->
 
   <!--Right section project gallery-->
   <section id="project_gallery">
@@ -97,10 +105,6 @@
     </div>
 
   </section>
-
-  <footer>
-    <h1 class="section_title">Contact Me @: </h1>
-  </footer>
 </body>
 
 </html>
