finish contact me section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
     <div id="contact_me">
       <h1 class="section_title">You can find me at:</h1>
       <div id="contact_inner_div">
-        
+        <a href="https://www.freecodecamp.org/zhouxiang19910319">freeCodeCamp</a>
+        <a href="https://github.com/zhouxiang19910319">github</a>
+        <a href="https://www.linkedin.com/in/xiang-zhou-03547755/">linkedin</a>
+        <a href="https://codepen.io/zhouxiang19910319/pens/public/">codepen</a>
+        <a href="https://twitter.com/zh0ux1ang">twitter</a>
+        <a href="https://medium.com/@xiang_zhou">medium</a>
+        <a href="https://slowpacedcoding.com/">blog</a>
       </div>
 
     </div>
