--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Xiang Zhou's portfolio</title>
-  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -45,13 +44,13 @@
     <div id="contact_me">
       <h1 class="section_title">You can find me at:</h1>
       <div id="contact_inner_div">
-        <a href="https://www.freecodecamp.org/zhouxiang19910319">freeCodeCamp</a>
-        <a href="https://github.com/zhouxiang19910319">github</a>
-        <a href="https://www.linkedin.com/in/xiang-zhou-03547755/">linkedin</a>
-        <a href="https://codepen.io/zhouxiang19910319/pens/public/">codepen</a>
-        <a href="https://twitter.com/zh0ux1ang">twitter</a>
-        <a href="https://medium.com/@xiang_zhou">medium</a>
-        <a href="https://slowpacedcoding.com/">blog</a>
+        <a href="https://www.freecodecamp.org/zhouxiang19910319" target="_blank">freeCodeCamp</a>
+        <a href="https://github.com/zhouxiang19910319" target="_blank">github</a>
+        <a href="https://www.linkedin.com/in/xiang-zhou-03547755/" target="_blank">linkedin</a>
+        <a href="https://codepen.io/zhouxiang19910319/pens/public/" target="_blank">codepen</a>
+        <a href="https://twitter.com/zh0ux1ang" target="_blank">twitter</a>
+        <a href="https://medium.freecodecamp.org/the-most-difficult-things-about-learning-to-code-by-yourself-b24ac8c3c23a "target="_blank">medium</a>
+        <a href="https://slowpacedcoding.com/" target="_blank">blog</a>
       </div>
 
     </div>
