change info about myself

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <li>learning to code through freecodecamp.org since 2016</li>
         <li>comfortable writing web pages using HTML CSS as well as javascript</li>
         <li>had experience with designing and building fully responsive website using bootstrap, css-grid</li>
-        <li>currently learning javascript data structures as well as algorithms</li>
-        <li>one of my articles regarding learning to code on medium has more than 50k views</li>
-        <li>built my own blog using jekyll</li>
+        <li>currently learning javascript data structures as well as algorithms(freeCodeCamp)</li>
+        <li><strong>one of my articles regarding learning to code on medium has more than 50k views and had been syndicated by THE NEXT WEB</strong></li>
+        <li>built my own blog using jekyll and Gatsby JS</li>
       </ul>
     </div>
 
