change color theme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Xiang Zhou's portfolio</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +18,7 @@
     <img src="img/profile_pic.png" alt="my_profile_picture" id="profile_pic">
 
     <div id="self_intro">
-      <p id="intro_first_line">My name is Xiang (Matt) Zhou. I am a web developer who loves tech.</p>
+      <p id="intro_first_line">My name is Xiang (Matt) Zhou. Owner of <a href="https://slowpacedcoding.com" target="_blank">slowpacedcoding.com</a></p> 
       <p>Here is a brief introduction about myself :</p>
       <ul>
         <li>learning to code through freecodecamp.org since 2016</li>
@@ -34,7 +35,7 @@
         <!--the 1st image has to be the same as the last image to create a flow -->
         <img src="img/Respsonsive_Web_Design_Cert.png" alt="responsive_web_design_cert">
         <img src="" alt="javascript_algorithm_cert">
-        <a href="https://medium.freecodecamp.org/the-most-difficult-things-about-learning-to-code-by-yourself-b24ac8c3c23a">
+        <a href="https://medium.freecodecamp.org/the-most-difficult-things-about-learning-to-code-by-yourself-b24ac8c3c23a" target="_blank">
           <img src="img/medium article.png" alt="medium_article_I_wrote">
         </a>
         <img src="img/Respsonsive_Web_Design_Cert.png" alt="responsive_web_design_cert">
